[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/sprites/gem.png" type="Texture" id=1]
[ext_resource path="res://items/Collectible.gd" type="Script" id=2]
[ext_resource path="res://assets/audio/pickup2.ogg" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7.5, 7 )

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "anim"
length = 1.6
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 3, 2, 1 ]
}

[node name="Collectible" type="Area2D"]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -1 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "anim"
anims/RESET = SubResource( 2 )
anims/anim = SubResource( 3 )

[node name="PickupSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = -10.0

[connection signal="body_entered" from="." to="." method="_on_Collectible_body_entered"]
[connection signal="finished" from="PickupSound" to="." method="_on_PickupSound_finished"]
